# 51

./: .gitignore  bu.aux  main.bbl  main.tex  ref.txt  thusetup.tex  thuthesis.cls
code/: pyproject.toml
code/2026-51MCM-Problem C/: 2026-51MCM-Problem C-English.docx  2026-51MCM-Problem C.docx
code/2026-51MCM-Problem C/C 附件(Attachment)/: Attachment 1：Two sets of displacement time series data – Question 1.xlsx  Attachment 2：Displacement time series data – Question 2.xlsx  Attachment 3：Monitoring data (training set & experimental set) – Question 3.xlsx  Attachment 4：Monitoring data (training set & experimental set) – Question 4.xlsx  Attachment 5：Monitoring data – Question 5.xlsx  附件1：两组位移时序数据-问题1.xlsx  附件2：位移时序数据-问题2.xlsx  附件3：监测数据（训练集与实验集）-问题3.xlsx  附件4：监测数据（训练集与实验集）-问题4.xlsx  附件5：监测数据-问题5.xlsx
code/outputs/award/: award_audit_summary.json  baseline_lock.json  model_quality_report.md  q1_bootstrap_correction_ci.csv  q1_huber_delta_sensitivity.csv  q1_model_comparison.csv  q1_residual_diagnostics.csv  q2_final_stage_models.csv  q2_final_transition_decision.csv  q2_transition_candidate_comparison.csv  q2_transition_sensitivity.csv  q2_transition_weight_stability_summary.csv  q2_weight_sensitivity.csv  q3_anomaly_sensitivity.csv  q3_common_anomaly_event_summary.csv  q3_continuous_fill_diagnostics.csv  q3_model_comparison.csv  q3_variable_contribution_stability.csv  q4_ablation_comparison.csv  validation_summary.json  (+10 more)
code/scripts/: make_paper_diagrams.py  run_all.py  run_award_audit.py  run_robustness_audit.py  validate_outputs.py
code/tests/: test_common_pipeline.py
(+72 files in other folders)
